# pytebis

./: .coveragerc  .gitignore  LICENSE  MANIFEST  TESTING.md  pyproject.toml  pytest.ini  readme.md  redis_test.py  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  tests.yml
pytebis/: __init__.py  lazyloader.py  pyTebis.code-workspace  tebis.py
pytebis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  test_numpy2_compatibility.py  test_numpy_compatibility.py  test_tebis.py  test_utils.py
