[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytebis"
version = "0.5.13"
description = "Python Connector for TeBIS from Steinhaus"
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "MrLight", email = "mrlight1@gmx.de"}
]
keywords = ["Python", "Connector", "TeBIS", "Steinhaus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.4"
dependencies = [
    "numpy",
    "pandas",
    "simplejson",
]

[project.urls]
Homepage = "https://github.com/MrLight/pytebis"
Repository = "https://github.com/MrLight/pytebis"

[tool.setuptools]
packages = ["pytebis"]
